<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">Silence</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="delete">Delete</string>
    <string name="please_wait">Please wait…</string>
    <string name="conversation_list_empty_placeholder" translatable="false">Placeholder</string>
    <string name="AbstractNotificationBuilder_new_message">New message</string>
    <string name="ApplicationPreferenceActivity_you_havent_set_a_passphrase_yet">You haven\'t set a passphrase yet!</string>
    <plurals name="ApplicationPreferencesActivity_messages_per_conversation">
        <item quantity="one">%d message per conversation</item>
        <item quantity="other">%d messages per conversation</item>
    </plurals>
    <string name="ApplicationPreferencesActivity_delete_all_old_messages_now">Delete all old messages now?</string>
    <plurals name="ApplicationPreferencesActivity_this_will_immediately_trim_all_conversations_to_the_d_most_recent_messages">
        <item quantity="one">This will immediately trim all conversations to the most recent message.</item>
        <item quantity="other">This will immediately trim all conversations to the %d most recent messages.</item>
    </plurals>
    <string name="ApplicationPreferencesActivity_delete">Delete</string>
    <string name="ApplicationPreferencesActivity_disable_storage_encryption">Disable storage encryption?</string>
    <string name="ApplicationPreferencesActivity_warning_this_will_disable_storage_encryption_for_all_messages">
        Warning, this will disable storage encryption for all messages and keys. Your encrypted
        sessions will continue to function, but anyone who gains physical access to your device will be
        able to read them.
    </string>
    <string name="ApplicationPreferencesActivity_disable">Disable</string>
    <string name="ApplicationPreferencesActivity_sms_enabled">Incoming SMS enabled</string>
    <string name="ApplicationPreferencesActivity_tap_to_change_your_default_sms_app">Tap to change your default SMS app</string>
    <string name="ApplicationPreferencesActivity_sms_disabled">Incoming SMS disabled</string>
    <string name="ApplicationPreferencesActivity_tap_to_make_silence_your_default_sms_app">Tap to make Silence your default SMS app</string>
    <string name="ApplicationPreferencesActivity_on">on</string>
    <string name="ApplicationPreferencesActivity_On">On</string>
    <string name="ApplicationPreferencesActivity_off">off</string>
    <string name="ApplicationPreferencesActivity_Off">Off</string>
    <string name="ApplicationPreferencesActivity_sms">SMS</string>
    <string name="ApplicationPreferencesActivity_mms">MMS</string>
    <string name="ApplicationPreferencesActivity_incoming_summary">Incoming %s</string>
    <string name="ApplicationPreferencesActivity_privacy_summary">Passphrase %1$s, Screen security %2$s</string>
    <string name="ApplicationPreferencesActivity_appearance_summary">Theme %1$s, Language %2$s</string>
    <plurals name="AppProtectionPreferenceFragment_minutes">
    <item quantity="one">%d minute</item>
    <item quantity="other">%d minutes</item>
    </plurals>
    <string name="AppProtectionPreferenceFragment_hours">h</string>
    <string name="AppProtectionPreferenceFragment_minutes_short">m</string>
    <string name="AppProtectionPreferenceFragment_seconds">s</string>
    <string name="AppProtectionPreferenceFragment_inactivity_timeout_interval">Inactivity timeout interval</string>
    <string name="DraftDatabase_Draft_image_snippet">(image)</string>
    <string name="DraftDatabase_Draft_audio_snippet">(audio)</string>
    <string name="DraftDatabase_Draft_video_snippet">(video)</string>
    <string name="AttachmentManager_cant_open_media_selection">Can\'t find an app to select media.</string>
    <string name="AttachmentManager_silence_requires_the_external_storage_permission_in_order_to_attach_photos_videos_or_audio">Silence requires the External Storage permission in order to attach photos, videos, or audio, but it has been permanently denied. Please continue to the app settings menu, select \"Permissions\", and enable \"Storage\".</string>
    <string name="AttachmentManager_silence_requires_contacts_permission_in_order_to_attach_contact_information">Silence requires Contacts permission in order to attach contact information, but it has been permanently denied. Please continue to the app settings menu, select \"Permissions\", and enable \"Contacts\".</string>
    <string name="AttachmentTypeSelectorAdapter_camera">Camera</string>
    <string name="AttachmentTypeSelectorAdapter_picture">Picture</string>
    <string name="AttachmentTypeSelectorAdapter_video">Video</string>
    <string name="AttachmentTypeSelectorAdapter_audio">Audio</string>
    <string name="AttachmentTypeSelectorAdapter_contact">Contact info</string>
    <string name="AudioSlidePlayer_error_playing_audio">Error playing audio!</string>
    <string name="BlockedContactsActivity_blocked_contacts">Blocked contacts</string>
    <string name="ConversationItem_message_size_d_kb">Message size: %d KB</string>
    <string name="ConversationItem_expires_s">Expires: %s</string>
    <string name="ConversationItem_error_not_delivered">Not delivered</string>
    <string name="ConversationItem_view_secure_media_question">View secure media?</string>
    <string name="ConversationItem_this_media_has_been_stored_in_an_encrypted_database_external_viewer_warning">This media has been stored in an encrypted database. Unfortunately, to view it with an external content viewer currently requires the data to be temporarily decrypted and written to storage. Are you sure that you would like to do this?</string>
    <string name="ConversationItem_error_received_stale_key_exchange_message">Outdated key exchange message received.</string>
    <string name="ConversationItem_received_key_exchange_message_tap_to_process">Received key exchange message, tap to process.</string>
    <string name="ConversationItem_group_action_left">%1$s has left the group.</string>
    <string name="ConversationItem_click_for_details">Tap for details</string>
    <string name="ConversationItem_unable_to_open_media">Can\'t find an app able to open this media.</string>
    <string name="ConversationItem_via_s">via %s</string>
    <string name="ConversationItem_xmpp_address_update_silence">XMPP address. Update Silence to enable this feature.</string>
    <string name="ConversationActivity_initiate_secure_session_question">Initiate secure session?</string>
    <string name="ConversationActivity_initiate_secure_session_with_s_question">Initiate secure session with %s?</string>
    <string name="ConversationActivity_detected_silence_initiate_session_question">Message received from someone who also has Silence, initiate a secure encrypted session?</string>
    <string name="ConversationActivity_abort_secure_session_confirmation">End secure session?</string>
    <string name="ConversationActivity_are_you_sure_that_you_want_to_abort_this_secure_session_question">Are you sure you want to end this secure session?</string>
    <string name="ConversationActivity_delete_thread_question">Delete conversation?</string>
    <string name="ConversationActivity_this_will_permanently_delete_all_messages_in_this_conversation">This will permanently delete all messages in this conversation.</string>
    <string name="ConversationActivity_add_attachment">Add attachment</string>
    <string name="ConversationActivity_select_contact_info">Select contact info</string>
    <string name="ConversationActivity_compose_message">Compose message</string>
    <string name="ConversationActivity_sorry_there_was_an_error_adding_your_attachment">Sorry, there was an error adding your attachment.</string>
    <string name="ConversationActivity_the_gif_you_selected_was_too_big">The GIF you selected was too big!</string>
    <string name="ConversationActivity_sorry_the_selected_video_exceeds_message_size_restrictions">Sorry, the selected video exceeds message size restrictions (%1$skB).</string>
    <string name="ConversationActivity_sorry_the_selected_audio_exceeds_message_size_restrictions">Sorry, the selected audio exceeds message size restrictions (%1$skB).</string>
    <string name="ConversationActivity_recipient_is_not_a_valid_sms_or_email_address_exclamation">Recipient is not a valid SMS or email address!</string>
    <string name="ConversationActivity_message_is_empty_exclamation">The message you are trying to send is empty!</string>
    <string name="ConversationActivity_group_members">Group members</string>
    <string name="ConversationActivity_group_conversation">Group conversation</string>
    <string name="ConversationActivity_unnamed_group">Unnamed group</string>
    <plurals name="ConversationActivity_d_recipients_in_group">
    <item quantity="one">%d member</item>
    <item quantity="other">%d members</item>
    </plurals>
    <string name="ConversationActivity_saved_draft">Saved draft</string>
    <string name="ConversationActivity_invalid_recipient">Invalid recipient!</string>
    <string name="ConversationActivity_calls_not_supported">Calls not supported</string>
    <string name="ConversationActivity_this_device_does_not_appear_to_support_dial_actions">This device does not appear to support dial actions.</string>
    <string name="ConversationActivity_cant_open_link">Can\'t find an app able to open this link.</string>
    <string name="ConversationActivity_transport_insecure_sms">Insecure SMS</string>
    <string name="ConversationActivity_transport_insecure_mms">Insecure MMS</string>
    <string name="ConversationActivity_transport_secure_sms">Secure SMS</string>
    <string name="ConversationActivity_transport_secure_mms">Secure MMS</string>
    <string name="GroupCreateActivity_actionbar_title">New group</string>
    <string name="ViewIdentityActivity_your_identity_fingerprint">Your identity fingerprint</string>
    <string name="contact_selection_activity__enter_name_or_number">Enter name or number</string>
    <string name="database_migration_activity__would_you_like_to_import_your_existing_text_messages">Would you like to import your existing text messages into Silence\'s encrypted database?</string>
    <string name="database_migration_activity__the_default_system_database_will_not_be_modified">The default system database will not be modified or altered in any way.</string>
    <string name="database_migration_activity__skip">Skip</string>
    <string name="database_migration_activity__import">Import</string>
    <string name="database_migration_activity__this_could_take_a_moment_please_be_patient">This could take a moment. Please be patient, you will be notified when the import is complete.</string>
    <string name="database_migration_activity__importing">IMPORTING</string>
    <string name="AndroidManifest__select_contacts">Select contacts</string>
    <string name="AndroidManifest__verify_identity">Verify identity</string>
    <string name="AndroidManifest__media_preview">Media preview</string>
    <string name="AndroidManifest__media_overview">All images</string>
    <string name="AndroidManifest__message_details">Message details</string>
    <string name="AndroidManifest_archived_conversations">Archived conversations</string>
    <string name="arrays__import_export">Import / export</string>
    <string name="preferences__sms_mms">SMS and MMS</string>
    <string name="preferences__notifications">Notifications</string>
    <string name="preferences__advanced">Advanced</string>
    <string name="preferences__privacy">Privacy</string>
    <string name="preferences__advanced_mms_access_point_names">Manual MMS settings</string>
    <string name="preferences__chats">Chats and media</string>
    <string name="preferences__appearance">Appearance</string>
    <string name="text_secure_normal__menu_settings">Settings</string>
</resources>