<?xml version="1.0" encoding="utf-8"?>

<!-- This fragment owns its patterned background independently of the host activity theme. -->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:fillViewport="true"
            android:background="@drawable/background_pattern_repeat"
            tools:ignore="Overdraw">

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center" >
        
        <LinearLayout android:id="@+id/prompt_layout"
                      android:paddingRight="16dip"
                      android:paddingLeft="16dip"
                      android:paddingTop="10dip"
                      android:layout_width="fill_parent"
                      android:layout_height="wrap_content"
                      android:layout_gravity="center"
                      android:visibility="gone"
                      android:orientation="vertical">
    
            <TextView style="@style/Registration.Description"
                      android:layout_width="fill_parent"
                      android:layout_marginBottom="16dip"
                      android:text="@string/database_migration_activity__would_you_like_to_import_your_existing_text_messages"/>
            
            <ImageView android:layout_width="wrap_content"
                       android:importantForAccessibility="no"
                       android:layout_height="wrap_content"
                       android:layout_gravity="center"
                       android:src="@drawable/import_database"/>
        
            <TextView style="@style/Registration.Description"
                      android:layout_width="fill_parent"
                      android:layout_marginBottom="16dip"
                      android:layout_marginTop="16dip"
                      android:text="@string/database_migration_activity__the_default_system_database_will_not_be_modified"/>
            
            <LinearLayout android:orientation="horizontal"
                          android:gravity="center"
                          android:layout_width="fill_parent"
                          android:layout_height="wrap_content"
                          android:layout_marginTop="20dip">

                <Button android:id="@+id/skip_button"
                    style="?android:attr/buttonBarButtonStyle"
                        android:text="@string/database_migration_activity__skip"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="7dip"
                        android:textAppearance="?android:attr/textAppearanceMedium"/>
                
                <Button android:id="@+id/import_button"
                    style="?android:attr/buttonBarButtonStyle"
                        android:text="@string/database_migration_activity__import"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"/>                
            </LinearLayout>
        </LinearLayout>
        
        <LinearLayout android:id="@+id/progress_layout"
                      android:paddingRight="16dip"
                      android:paddingLeft="16dip"
                      android:paddingTop="10dip"
                      android:layout_width="fill_parent"
                      android:layout_height="wrap_content"
                      android:layout_gravity="center"
                      android:visibility="visible"
                      android:orientation="vertical">
    
            <ImageView android:layout_width="wrap_content"
                       android:importantForAccessibility="no"
                       android:layout_height="wrap_content"
                       android:layout_gravity="center"
                       android:src="@drawable/import_database"/>
            
            
            <TextView style="@style/Registration.Description"
                      android:layout_width="fill_parent"
                      android:layout_marginTop="34dip"
                      android:layout_marginBottom="16dip"
                      android:text="@string/database_migration_activity__this_could_take_a_moment_please_be_patient"/>
            
            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_marginTop="15dip"
                android:layout_weight="1.0" >

                <TextView
                    android:id="@+id/import_status"
                    style="@style/Registration.Constant"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:text="@string/database_migration_activity__progress_default"
                    android:textSize="12.0sp" />

                <TextView
                    android:id="@+id/import_label"
                    style="@style/Registration.Constant"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_toStartOf="@id/import_status"
                    android:text="@string/database_migration_activity__importing"
                    android:textAllCaps="true"
                    android:textSize="12.0sp"
                    android:textStyle="normal" />
            </RelativeLayout>

            <ProgressBar
                android:id="@+id/import_progress"
                style="@style/Widget.ProgressBar.Horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="14.0dip"
                android:layout_marginTop="2.0dip" />
            
        </LinearLayout>        
    </FrameLayout>
</ScrollView>
